<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:gravity="center_vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_agreement"
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginEnd="@dimen/dp_8"
            android:button="@drawable/selector_checkbox_white"
            android:checked="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_login_means_agree"
            android:textColor="#B2B2B2"
            android:textSize="@dimen/font_12"
            android:lineHeight="@dimen/dp_20" />
        <TextView
            android:id="@+id/tv_cmcc_clause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cm_certification_clause"
            android:textColor="@color/black"
            android:textSize="@dimen/font_12"
            android:textStyle="bold"
            android:lineHeight="@dimen/dp_20" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_lingxi_possessive"
            android:textColor="#B2B2B2"
            android:textSize="@dimen/font_12"
            android:lineHeight="@dimen/dp_20" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/dp_24">

        <TextView
            android:id="@+id/tv_user_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_agreement"
            android:textColor="@color/black"
            android:textSize="@dimen/font_12"
            android:textStyle="bold"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/dp_2"
            android:lineHeight="@dimen/dp_20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_and"
            android:textColor="#B2B2B2"
            android:textSize="@dimen/font_12"
            android:lineHeight="@dimen/dp_20" />

        <TextView
            android:id="@+id/tv_privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"
            android:textColor="@color/black"
            android:textSize="@dimen/font_12"
            android:textStyle="bold"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/dp_2"
            android:lineHeight="@dimen/dp_20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_login_with_local_number"
            android:textColor="#B2B2B2"
            android:textSize="@dimen/font_12"
            android:lineHeight="@dimen/dp_20" />
    </LinearLayout>
</LinearLayout>