<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/font_22"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/guide_widget_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_15"
        android:background="@drawable/bg_white_radius_16"
        android:padding="@dimen/dp_10"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_1E1E1E"
            android:textSize="@dimen/font_16"
            android:text="@string/guide_widget_card_title1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/font_15"
            android:text="@string/guide_widget_card_con1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:src="@mipmap/icon_guide_widget1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_15"
        android:background="@drawable/bg_white_radius_16"
        android:padding="@dimen/dp_10"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_1E1E1E"
            android:textSize="@dimen/font_16"
            android:text="@string/guide_widget_card_title2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/font_15"
            android:text="@string/guide_widget_card_con2"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:src="@mipmap/icon_guide_widget2"/>
    </LinearLayout>



</LinearLayout>