<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_white_radius_16"
    android:padding="@dimen/dp_24">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_logout"
        android:textSize="@dimen/font_18"
        android:textColor="@color/text_primary"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="@dimen/dp_16" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_confirm_logout"
        android:textSize="@dimen/font_16"
        android:textColor="@color/text_secondary"
        android:gravity="center"
        android:layout_marginBottom="@dimen/dp_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_8">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_cancel"
            android:textSize="@dimen/font_16"
            android:textColor="@color/text_secondary"
            android:background="@drawable/bg_button_secondary"
            android:layout_marginEnd="@dimen/dp_8" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_confirm"
            android:textSize="@dimen/font_16"
            android:textColor="@android:color/white"
            android:background="@drawable/bg_button_red"
            android:layout_marginStart="@dimen/dp_8" />

    </LinearLayout>

</LinearLayout>